Issue #SB-13367 fix: less options center align

--- a/org.ekstep.questionunit.mcq-1.3/renderer/styles/horizontal_and_vertical.css
+++ b/org.ekstep.questionunit.mcq-1.3/renderer/styles/horizontal_and_vertical.css
@@ -313,7 +313,6 @@
     height: 100%;
     justify-content: center;
     overflow-x: scroll;
-    justify-content: left;
     max-width: 87%;
     overflow-y: hidden;
 }
